[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
ws = "0.9.1"
chrono = "0.4.19"
tokio-stream = "0.1.8"
tokio = { version = "1.18.1", features = ["full"] }
